--- a/articles/azure-app-configuration/index.yml
+++ b/articles/azure-app-configuration/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: azure-app-configuration
   ms.topic: landing-page
   ms.date: 02/03/2020
-  ms.openlocfilehash: 64a9bc3cf00af66c65b06b9edbed4621668b05bc
-  ms.sourcegitcommit: d4734bc680ea221ea80fdea67859d6d32241aefc
+  ms.openlocfilehash: 917508f1fee4e4a53083a29e2459a442f7fddccd
+  ms.sourcegitcommit: 227b9a1c120cd01f7a39479f20f883e75d86f062
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 02/14/2021
-  ms.locfileid: "100365023"
+  ms.lasthandoff: 02/18/2021
+  ms.locfileid: "100650237"
 landingContent:
 - title: Azure App Configuration について
   linkLists:
@@ -24,6 +24,8 @@ landingContent:
       url: overview.md
     - text: よく寄せられる質問
       url: faq.yml
+    - text: ベスト プラクティス
+      url: howto-best-practices.md
   - linkListType: video
     links:
     - text: Azure App Configuration の概要
@@ -52,15 +54,15 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
+    - text: ASP.NET Core アプリをコーディングする
+      url: quickstart-aspnet-core-app.md
     - text: .NET Core アプリをコーディングする
       url: quickstart-dotnet-core-app.md
     - text: .NET Framework アプリをコーディングする
       url: quickstart-dotnet-app.md
-    - text: ASP.NET Core アプリをコーディングする
-      url: quickstart-aspnet-core-app.md
     - text: C# で Azure Functions アプリをコーディングする
       url: quickstart-azure-functions-csharp.md
-    - text: Spring Boot アプリをコーディングする
+    - text: Java Spring アプリをコーディングする
       url: quickstart-java-spring-app.md
     - text: Python アプリをコーディングする
       url: quickstart-python.md
@@ -78,6 +80,8 @@ landingContent:
       url: enable-dynamic-configuration-azure-functions-csharp.md
     - text: Spring Boot で動的な構成を使用する
       url: enable-dynamic-configuration-java-spring-app.md
+    - text: プッシュ モデルを使用した動的な構成の統合
+      url: enable-dynamic-configuration-dotnet-core-push-refresh.md
   - linkListType: tutorial
     links:
     - text: CI/CD パイプラインとの統合
@@ -102,10 +106,10 @@ landingContent:
       url: concept-feature-management.md
   - linkListType: quickstart
     links:
-    - text: .NET Core アプリ
-      url: use-feature-flags-dotnet-core.md
     - text: ASP.NET Core アプリ
       url: quickstart-feature-flag-aspnet-core.md
+    - text: .NET Core アプリ
+      url: use-feature-flags-dotnet-core.md
     - text: .NET Framework アプリ
       url: quickstart-feature-flag-dotnet.md
     - text: Spring Boot アプリ
@@ -114,6 +118,12 @@ landingContent:
     links:
     - text: 機能フラグを管理する
       url: manage-feature-flags.md
+    - text: ASP.NET Core 内で機能フラグを使用する
+      url: use-feature-flags-dotnet-core.md
+    - text: Spring Boot 内で機能フラグを使用する
+      url: use-feature-flags-spring-boot.md
+    - text: 指定したユーザー/グループの機能を有効にする
+      url: howto-targetingfilter-aspnet-core.md
   - linkListType: reference
     links:
     - text: .NET Core ライブラリ
