--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -47,8 +47,8 @@
       items:
         - name: 透明性に関するメモ
           items:
-            - name: 空間分析の概要
-              href: intro-to-spatial-analysis-public-preview.md
+            - name: 空間分析のユース ケース
+              href: /legal/cognitive-services/computer-vision/transparency-note-spatial-analysis?context=%2fazure%2fcognitive-services%2fComputer-vision%2fcontext%2fcontext
             - name: 特性と制限
               href: /legal/cognitive-services/computer-vision/accuracy-and-limitations?context=%2fazure%2fcognitive-services%2fComputer-vision%2fcontext%2fcontext
         - name: 統合と責任ある使用
@@ -82,6 +82,8 @@
           displayName: 'container instances, container, containers, images'
     - name: 空間分析コンテナー
       items:
+        - name: 空間分析の概要
+          href: intro-to-spatial-analysis-public-preview.md
         - name: ホスト マシンをセットアップしてコンテナーを実行する
           href: spatial-analysis-container.md
         - name: 操作を構成する
@@ -108,8 +110,14 @@
       href: /cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list
     - name: Azure PowerShell
       href: /powershell/module/azurerm.cognitiveservices/
-    - name: REST API
-      href: 'https://docs.microsoft.com/rest/api/computer-vision/'
+    - name: Computer Vision API v3.2 プレビュー
+      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/computer-vision-v3-2-preview-2/operations/5d986960601faab4bf452005'
+    - name: Computer Vision API v3.1
+      href: 'https://westcentralus.dev.cognitive.microsoft.com/docs/services/computer-vision-v3-1-ga/operations/5d986960601faab4bf452005'
+    - name: Computer Vision API v2.1
+      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/5cd27ec07268f6c679a3e641'
+    - name: Computer Vision API v1.0
+      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/56f91f2d778daf23d8ec6739'
     - name: SDK
       items:
         - name: .NET
