--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -100,7 +100,7 @@
       href: iot-hub-scaling.md
     - name: 高可用性とディザスター リカバリー
       href: iot-hub-ha-dr.md
-    - name: IoT Hub を別のリージョンに複製する方法
+    - name: IoT ハブを別のリージョンに複製する方法
       href: iot-hub-how-to-clone.md
     - name: IoT Hub IP アドレスについて
       href: iot-hub-understand-ip-address.md
@@ -177,7 +177,7 @@
           href: iot-hub-amqp-support.md
         - name: 用語集
           href: iot-hub-devguide-glossary.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -323,7 +323,7 @@
               href: iot-hub-configure-file-upload-cli.md
         - name: X.509 証明書によるハブのセキュリティ保護
           href: iot-hub-security-x509-get-started.md
-        - name: IoT Hub のアップグレード
+        - name: IoT ハブのアップグレード
           href: iot-hub-upgrade.md
         - name: IP フィルター処理を構成する
           href: iot-hub-ip-filtering.md
@@ -497,10 +497,10 @@
           href: /microsoft-iot-central/
         - name: IoT Edge
           href: ../iot-edge/index.yml
-        - name: IoT ソリューション アクセラレータ
-          href: ../iot-accelerators/index.yml
         - name: IoT プラグ アンド プレイ
           href: ../iot-pnp/index.yml
+        - name: IoT ソリューション アクセラレータ
+          href: ../iot-accelerators/index.yml
         - name: Azure Maps
           href: ../azure-maps/index.yml
         - name: Time Series Insights
