--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -132,7 +132,7 @@
                   href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 管理操作の承認
               href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: セキュリティ
+        - name: Security
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -635,20 +635,16 @@
       items:
         - name: Data Lake Storage の概要
           href: data-lake-storage-introduction.md
-    - name: クイックスタート
-      items:
-        - name: Databricks を使用したデータの分析
-          href: data-lake-storage-quickstart-create-databricks-account.md
     - name: チュートリアル
       items:
-        - name: Azure Databricks を使ったデータの抽出、変換、読み込み
-          href: /azure/databricks/scenarios/databricks-extract-load-sql-data-warehouse?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Spark を使用した Databricks での Data Lake Storage のデータへのアクセス
+        - name: Databricks および Spark と共に使用する
           href: data-lake-storage-use-databricks-spark.md
-        - name: Azure HDInsight の Apache Hive を使用したデータの抽出、変換、読み込み
+        - name: Apache Hive および HDInsight と共に使用する
           href: data-lake-storage-tutorial-extract-transform-load-hive.md
-        - name: Event Grid を使用した Databricks Delta テーブルへのデータの挿入
+        - name: Databricks Delta および Event Grid と共に使用する
           href: data-lake-storage-events.md
+        - name: 他の Azure サービスの使用
+          href: data-lake-storage-integrate-with-services-tutorials.md
     - name: 概念
       items:
         - name: ビッグ データの処理
@@ -667,7 +663,7 @@
               href: data-lake-storage-introduction-abfs-uri.md
             - name: 階層型名前空間について
               href: data-lake-storage-namespace.md
-        - name: セキュリティ
+        - name: Security
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -705,7 +701,7 @@
       items:
         - name: ストレージ アカウントの作成
           href: create-data-lake-storage-account.md
-        - name: 移行
+        - name: アカウントとデータ ストアを移行する
           items:
             - name: Data Lake Storage Gen1 から移行する
               href: data-lake-storage-migrate-gen1-to-gen2.md
@@ -713,31 +709,7 @@
               href: data-lake-storage-migrate-on-premises-HDFS-cluster.md
             - name: HDFS ストアをオンラインで移行する
               href: migrate-gen2-wandisco-live-data-platform.md
-        - name: 管理する
-          items:
-            - name: .NET
-              href: data-lake-storage-directory-file-acl-dotnet.md
-            - name: Java
-              href: data-lake-storage-directory-file-acl-java.md
-            - name: Python
-              href: data-lake-storage-directory-file-acl-python.md
-            - name: JavaScript
-              href: data-lake-storage-directory-file-acl-javascript.md
-            - name: PowerShell
-              href: data-lake-storage-directory-file-acl-powershell.md
-            - name: CLI
-              href: data-lake-storage-directory-file-acl-cli.md
-            - name: ストレージ エクスプローラー
-              href: data-lake-storage-explorer.md
-            - name: Hadoop ファイル システム CLI
-              href: data-lake-storage-use-hdfs-data-lake-storage.md
-            - name: ACL を再帰的に設定する
-              href: recursive-access-control-lists.md
-        - name: クエリ
-          items:
-            - name: クエリの高速化によるデータのフィルター処理
-              href: data-lake-storage-query-acceleration-how-to.md
-        - name: 転送
+        - name: データの転送
           items:
             - name: AzCopy
               items:
@@ -761,9 +733,47 @@
               href: data-lake-storage-use-distcp.md
             - name: データ移動ライブラリを使用してデータを転送する
               href: ../common/storage-use-data-movement-library.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 最適化
+        - name: アクセス制御を管理する
           items:
-            - name: パフォーマンスを最適化する
+            - name: ストレージ エクスプローラー
+              href: data-lake-storage-explorer-acl.md
+            - name: PowerShell
+              href: data-lake-storage-acl-powershell.md
+            - name: CLI
+              href: data-lake-storage-acl-cli.md
+            - name: .NET
+              href: data-lake-storage-acl-dotnet.md
+            - name: Java
+              href: data-lake-storage-acl-java.md
+            - name: Python
+              href: data-lake-storage-acl-python.md
+            - name: JavaScript
+              href: data-lake-storage-acl-javascript.md
+        - name: データの処理
+          items:
+            - name: ストレージ エクスプローラー
+              href: data-lake-storage-explorer.md
+            - name: PowerShell
+              href: data-lake-storage-directory-file-acl-powershell.md
+            - name: CLI
+              href: data-lake-storage-directory-file-acl-cli.md
+            - name: .NET
+              href: data-lake-storage-directory-file-acl-dotnet.md
+            - name: Java
+              href: data-lake-storage-directory-file-acl-java.md
+            - name: Python
+              href: data-lake-storage-directory-file-acl-python.md
+            - name: JavaScript
+              href: data-lake-storage-directory-file-acl-javascript.md
+            - name: クエリの高速化
+              href: data-lake-storage-query-acceleration-how-to.md
+            - name: Hadoop ファイル システム CLI
+              href: data-lake-storage-use-hdfs-data-lake-storage.md
+        - name: Azure サービスで使用する
+          href: data-lake-storage-integrate-with-services-tutorials.md
+        - name: パフォーマンスの最適化
+          items:
+            - name: パフォーマンスの最適化の概要
               href: data-lake-storage-performance-tuning-guidance.md
             - name: HDInsight の Apache Spark を最適化する
               href: data-lake-storage-performance-tuning-spark.md
