--- a/articles/azure-arc/kubernetes/index.yml
+++ b/articles/azure-arc/kubernetes/index.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Landing
-title: Azure Arc Kubernetes (プレビュー)
+title: Azure Arc 対応 Kubernetes (プレビュー)
 summary: Azure Arc を使用して Kubernetes クラスターを管理する方法について説明します
 metadata:
-  title: Azure Arc Kubernetes
+  title: Azure Arc 対応 Kubernetes
   description: Azure でオンプレミスのマシンを管理する方法について説明します
-  author: 
+  author: shashankbarsin
   ms.service: azure-arc
   ms.topic: landing-page
-  ms.date: 06/26/2020
-  ms.author: 
-  ms.openlocfilehash: 9eeddfefe451eb524484df8a1986c7ec736c4c0f
-  ms.sourcegitcommit: d79513b2589a62c52bddd9c7bd0b4d6498805dbe
+  ms.date: 02/15/2021
+  ms.author: shasb
+  ms.openlocfilehash: 97343e8c23e202e70ec30bb0a522105889ea08b3
+  ms.sourcegitcommit: de98cb7b98eaab1b92aa6a378436d9d513494404
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/18/2020
-  ms.locfileid: "97674374"
+  ms.lasthandoff: 02/17/2021
+  ms.locfileid: "100560240"
 landingContent:
 - title: Azure Arc を使用して Kubernetes クラスターを Azure に接続する
   linkLists:
@@ -22,10 +22,22 @@ landingContent:
     links:
     - text: Azure Arc 対応 Kubernetes とは
       url: overview.md
+  - linkListType: concept
+    links:
+    - text: エージェントのアーキテクチャ
+      url: conceptual-agent-architecture.md
+    - text: 構成と GitOps
+      url: conceptual-configurations.md
+    - text: よく寄せられる質問
+      url: faq.md
+- title: 作業開始
+  linkLists:
   - linkListType: quickstart
     links:
     - text: クラスターの接続
       url: connect-cluster.md
+- title: クラスタの構成、管理、監視
+  linkLists:
   - linkListType: how-to-guide
     links:
     - text: GitOps を使用して構成をデプロイする
