--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -79,6 +79,8 @@
       href: durable-functions-perf-and-scale.md
     - name: 高可用性
       href: durable-functions-disaster-recovery-geo-distribution.md
+    - name: データの永続化とシリアル化
+      href: durable-functions-serialization-and-persistence.md
 - name: リファレンス
   items:
     - name: host.json 設定
