--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -151,6 +151,8 @@
       href: notification-hubs-baidu-china-android-notifications-get-started.md
     - name: Notification Hubs 経由で APNS VOIP を使用する
       href: voip-apns.md
+    - name: Notification Hubs の診断ログを有効にする
+      href: notification-hubs-diagnostic-logs.md
 - name: リファレンス
   items:
     - name: .NET
