--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -26,11 +26,7 @@
       href: tutorial-register-applications.md
     - name: 3 - ユーザー フローの作成
       href: tutorial-create-user-flows.md
-    - name: ID プロバイダーの追加
-      href: tutorial-add-identity-providers.md
-    - name: UI のカスタマイズ
-      href: tutorial-customize-ui.md
-    - name: ユーザーを認証する
+    - name: 4 - ユーザーの認証
       items:
         - name: ASP.NET
           href: tutorial-web-app-dotnet.md
@@ -41,7 +37,7 @@
         - name: Python
           href: tutorial-web-app-python.md
           displayName: flask
-    - name: API アクセスの許可
+    - name: 5 - API アクセスの許可
       items:
         - name: ASP.NET
           href: tutorial-web-api-dotnet.md
@@ -434,20 +430,20 @@
     - name: API Management API のセキュリティ保護
       href: secure-api-management.md
       displayName: 'apim, api management, migrate, b2clogin.com'
-    - name: 電話ベースの MFA をセキュリティで保護する
-      href: phone-based-mfa.md
-      displayName: 'multi-factor authentication, Azure Monitor, Log Analytics'
     - name: ログと監視
       items:
         - name: 監査ログ
           href: view-audit-logs.md
-          displayName: 'log, logs, logging, usage, events'
+          displayName: 'log, logs, logging, usage, events, reports, reporting'
         - name: Azure Monitor
           href: azure-monitor.md
-          displayName: 'log, logs, logging, usage, events'
+          displayName: 'log, logs, logging, usage, events, reports, reporting, dashboard'
         - name: Usage analytics
           href: analytics-with-application-insights.md
-          displayName: 'application insights, app insights'
+          displayName: 'application insights, app insights, reports, reporting'
+        - name: 電話ベースの MFA をセキュリティで保護する
+          href: phone-based-mfa.md
+          displayName: 'multi-factor authentication, Azure Monitor, Log Analytics, reports, reporting, dashboard'
     - name: コンプライアンス
       items:
         - name: ユーザー アクセス
