--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -67,6 +67,8 @@
           href: airtable-tutorial.md
         - name: AirWatch
           href: airwatch-tutorial.md
+        - name: AKASHI
+          href: akashi-tutorial.md
         - name: Alcumus Info Exchange
           href: alcumus-info-tutorial.md
         - name: AlertMedia
@@ -791,6 +793,8 @@
           href: hr2day-tutorial.md
         - name: HRworks Single Sign-On
           href: hrworks-single-sign-on-tutorial.md
+        - name: HSB ThoughtSpot
+          href: hsb-thoughtspot-tutorial.md
         - name: Hub Planner
           href: hub-planner-tutorial.md
         - name: HubSpot SAML
@@ -809,6 +813,8 @@
           href: iamip-patent-platform-tutorial.md
         - name: IBM Digital Business Automation on Cloud
           href: ibm-digital-business-automation-on-cloud-tutorial.md
+        - name: IBMid
+          href: ibmid-tutorial.md
         - name: IBM Kenexa Survey Enterprise
           href: kenexasurvey-tutorial.md
         - name: IBM OpenPages
@@ -1087,6 +1093,8 @@
           href: maptician-tutorial.md
         - name: Marketo
           href: marketo-tutorial.md
+        - name: Maverics Identity Orchestrator SAML Connector
+          href: maverics-identity-orchestrator-saml-connector-tutorial.md
         - name: Maxient Conduct Manager Software
           href: maxient-conduct-manager-software-tutorial.md
         - name: MaxxPoint
@@ -1301,6 +1309,8 @@
           href: panorays-tutorial.md
         - name: Pantheon
           href: pantheon-tutorial.md
+        - name: Parkalot - 駐車場管理
+          href: parkalot-car-park-management-tutorial.md
         - name: PatentSQUARE
           href: patentsquare-tutorial.md
         - name: Pavaso Digital Close
@@ -1465,6 +1475,8 @@
           href: reviewsnap-tutorial.md
         - name: Reward Gateway
           href: reward-gateway-tutorial.md
+        - name: Rewatch
+          href: rewatch-tutorial.md
         - name: RFPIO
           href: rfpio-tutorial.md
         - name: RightAnswers
@@ -1597,6 +1609,8 @@
           href: sharepoint-on-premises-tutorial.md
         - name: ShareVault
           href: sharevault-tutorial.md
+        - name: SharingCloud
+          href: sharingcloud-tutorial.md
         - name: Shibumi
           href: shibumi-tutorial.md
         - name: ShipHazmat
@@ -2021,6 +2035,8 @@
           href: zscaler-two-tutorial.md
         - name: Zscaler ZSCloud
           href: zscaler-zscloud-tutorial.md
+        - name: Zuddl
+          href: zuddl-tutorial.md
         - name: Zwayam
           href: zwayam-tutorial.md
 - name: ユーザー プロビジョニングのチュートリアル
@@ -2134,6 +2150,8 @@
           href: helloid-provisioning-tutorial.md
         - name: Hootsuite
           href: hootsuite-provisioning-tutorial.md
+        - name: Hoxhunt
+          href: hoxhunt-provisioning-tutorial.md
         - name: Ideo
           href: ideo-provisioning-tutorial.md
         - name: Infor CloudSuite
