--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: ggailey777
   ms.author: azfundocs
   ms.date: 09/17/2019
-  ms.openlocfilehash: 10c606ab86a577f22167197138e56a14d176b88a
-  ms.sourcegitcommit: 9d9221ba4bfdf8d8294cf56e12344ed05be82843
+  ms.openlocfilehash: 65b2c25bde616f8a2bbc9abf6439871d288306b9
+  ms.sourcegitcommit: d4734bc680ea221ea80fdea67859d6d32241aefc
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/19/2021
-  ms.locfileid: "98570135"
+  ms.lasthandoff: 02/14/2021
+  ms.locfileid: "100363034"
 landingContent:
 - title: Azure Functions について
   linkLists:
@@ -128,14 +128,22 @@ landingContent:
       url: functions-how-to-azure-devops.md
     - text: Jenkins プラグインを使用したデプロイ
       url: /azure/developer/jenkins/deploy-to-azure-functions
-- title: パフォーマンスと監視
+- title: パフォーマンスと監視のベスト プラクティス
   linkLists:
   - linkListType: concept
     links:
-    - text: Functions の監視
-      url: functions-monitoring.md
-    - text: パフォーマンスを最適化する
+    - text: パフォーマンスと信頼性
       url: functions-best-practices.md
+    - text: 接続の管理
+      url: manage-connections.md
+    - text: ストレージに関する考慮事項
+      url: storage-considerations.md
+    - text: エラー処理と関数の再試行
+      url: functions-bindings-error-pages.md
+    - text: セキュリティ
+      url: security-concepts.md
+    - text: 関数の監視
+      url: functions-monitoring.md
     - text: ネットワークに関する考慮事項
       url: functions-networking-options.md
   - linkListType: how-to-guide
