--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -60,6 +60,8 @@
       href: ../migrate/how-to-create-azure-vmware-solution-assessment.md?context=/azure/migrate/context/migrate-context.json
     - name: DHCP の管理
       href: manage-dhcp.md
+    - name: NSX ネットワーク コンポーネントの構成
+      href: configure-nsx-network-components-azure-portal.md
     - name: VM のディザスター リカバリーをデプロイする
       href: disaster-recovery-for-virtual-machines.md
     - name: コンテンツ ライブラリを介して VM をデプロイする
