--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -8,12 +8,12 @@
       href: whats-new.md
 - name: クイックスタート
   items:
-    - name: QnA Maker ポータルでナレッジ ベースを作成する
+    - name: QnA Maker ポータルでナレッジ ベースを作成してクエリを実行する
       href: Quickstarts/create-publish-knowledge-base.md
+    - name: クライアント ライブラリまたは REST API を使用してナレッジ ベースを作成し、クエリを実行する
+      href: Quickstarts/quickstart-sdk.md
     - name: REST API を使用してナレッジ ベースにクエリを実行する
       href: Quickstarts/get-answer-from-knowledge-base-using-url-tool.md
-    - name: クライアント ライブラリまたは REST API の使用
-      href: Quickstarts/quickstart-sdk.md
 - name: チュートリアル
   items:
     - name: Power 仮想エージェントとの統合
@@ -50,15 +50,6 @@
       displayName: 'azure, resource, key, upgrade, pricing, tier,'
     - name: QnA Maker のリソース アクセスを管理する
       href: How-To/manage-qna-maker-app.md
-    - name: ナレッジ ベースを強化するようアクティブ ラーニングを設定する
-      items:
-        - name: アクティブ ラーニングを有効にする
-          href: How-To/use-active-learning.md
-        - name: 推奨される代わりの質問の取得
-          href: How-to/improve-knowledge-base.md
-          displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning, clusterHead, totalAutoSuggestedCount, totalUserSuggestedCount, autoSuggestedCount, userSuggestedCount'
-    - name: アクティブ ラーニングを有効にする
-      href: How-To/use-active-learning.md
     - name: ナレッジ ベースの管理
       items:
         - name: ナレッジ ベースを作成する
@@ -79,12 +70,18 @@
         - name: フォローアップ プロンプトの追加
           href: How-To/multiturn-conversation.md
           displayName: 'multi-turn dialogs, parent question, child question, filtering, metadata, state, context, prompt, follow-up, followup, flow, conversation, previous question'
-        - name: 推奨される代わりの質問の取得
-          href: How-to/improve-knowledge-base.md
-          displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning, clusterHead, totalAutoSuggestedCount, totalUserSuggestedCount, autoSuggestedCount, userSuggestedCount'
+        - name: 既定の回答の変更
+          href: How-To/change-default-answer.md
     - name: ナレッジ ベースの照会
       href: How-To/metadata-generateanswer-usage.md
       displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters, GenerateAnswer, API, answer, RankerType, id, text, question, context, 200, 2xx, 400, 401, 403, 404'
+    - name: ナレッジ ベースを強化するようアクティブ ラーニングを設定する
+      items:
+        - name: アクティブ ラーニングを有効にする
+          href: How-To/use-active-learning.md
+        - name: 推奨される代わりの質問の取得
+          href: How-to/improve-knowledge-base.md
+          displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning, clusterHead, totalAutoSuggestedCount, totalUserSuggestedCount, autoSuggestedCount, userSuggestedCount'
     - name: 分析とテレメトリ
       href: How-To/get-analytics-knowledge-base.md
 - name: リファレンス
@@ -100,8 +97,6 @@
     - name: セキュリティで保護された SharePoint ファイルの追加
       href: How-To/add-sharepoint-datasources.md
       displayName: 'Sharepoint, secure, AAD, azure directory, admin, permission, authorization, file, authentication'
-    - name: 既定の回答の変更
-      href: How-To/change-default-answer.md
     - name: サービス構成
       href: reference-app-service.md
     - name: コンテンツ形式のガイドライン
