--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -19,8 +19,18 @@
       href: tutorial-end-to-end.md
 - name: 概念
   items:
-    - name: カスタム モデル
+    - name: DTDL モデル
       href: concepts-models.md
+    - name: オントロジ
+      items:
+        - name: オントロジとは
+          href: concepts-ontologies.md
+        - name: 業界標準のオントロジの採用
+          href: concepts-ontologies-adopt.md
+        - name: オントロジの変換
+          href: concepts-ontologies-convert.md
+        - name: オントロジの拡張
+          href: concepts-ontologies-extend.md
     - name: デジタル ツインとツイン グラフ
       href: concepts-twins-graph.md
     - name: クエリ言語
@@ -65,10 +75,8 @@
           href: how-to-move-regions.md
     - name: モデルを設計する
       items:
-        - name: カスタム モデルを管理する
+        - name: DTDL モデルを管理する
           href: how-to-manage-model.md
-        - name: 業界標準モデルを統合する
-          href: how-to-integrate-models.md
         - name: モデルを解析および検証する
           href: how-to-parse-models.md
         - name: タグを追加する
@@ -249,6 +257,12 @@
           href: /samples/azure-samples/digital-twins-explorer/digital-twins-explorer/
         - name: DTDL 検証ツール (サンプル)
           href: /samples/azure-samples/dtdl-validator/dtdl-validator/
+        - name: モデル アップローダー (サンプル)
+          href: 'https://github.com/Azure/opendigitaltwins-building-tools/tree/master/ModelUploader'
+        - name: モデル ビジュアライザー (サンプル)
+          href: 'https://github.com/Azure/opendigitaltwins-building-tools/tree/master/AdtModelVisualizer'
+        - name: OWL2DTDL コンバーター
+          href: 'https://github.com/Azure/opendigitaltwins-building-tools/tree/master/OWL2DTDL'
         - name: DPS と IoT Hub の統合サンプル
           href: /samples/azure-samples/digital-twins-iothub-integration/adt-iothub-provision-sample/
         - name: SignalR 統合のサンプル
