--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -33,8 +33,12 @@
       href: tutorial-load-balancer-standard-public-zonal-portal.md
     - name: Load Balancer でのポート転送の構成
       href: tutorial-load-balancer-port-forwarding-portal.md
-    - name: リージョン間ロード バランサーの作成 - ポータル
-      href: tutorial-cross-region-portal.md
+    - name: リージョン間のロード バランサー
+      items:
+        - name: リージョン間ロード バランサーの作成 - ポータル
+          href: tutorial-cross-region-portal.md
+        - name: リージョン間ロード バランサーの作成 - PowerShell
+          href: tutorial-cross-region-powershell.md
 - name: サンプル
   items:
     - name: Azure CLI
@@ -89,6 +93,8 @@
       href: backend-pool-management.md
     - name: Standard Load Balancer と Virtual Machine Scale Sets
       href: load-balancer-standard-virtual-machine-scale-sets.md
+    - name: Azure Instance Metadata Service を使用した情報の取得
+      href: instance-metadata-service-load-balancer.md
 - name: 操作方法
   items:
     - name: ポータルの設定
@@ -144,6 +150,8 @@
           href: move-across-regions-internal-load-balancer-powershell.md
     - name: 送信専用のロード バランサーの構成
       href: egress-only.md
+    - name: Azure IMDS を使用したメタデータの取得
+      href: howto-load-balancer-imds.md
     - name: トラブルシューティング
       items:
         - name: Azure Load Balancer のトラブルシューティング
@@ -181,6 +189,8 @@
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.network/loadbalancers
       displayName: ARM
+    - name: Azure Instance Metadata Service (IMDS) の一般的なエラー コード
+      href: troubleshoot-load-balancer-imds.md
 - name: リソース
   items:
     - name: Microsoft Learn でスキルを身に付ける
