--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -55,13 +55,13 @@
           href: role-assignments-list-cli.md
         - name: REST API
           href: role-assignments-list-rest.md
-    - name: ロールの割り当てを追加または削除する
+    - name: ロールを割り当てる
       items:
-        - name: ロールの割り当てを追加する手順
+        - name: ロールを割り当てる手順
           href: role-assignments-steps.md
         - name: ポータル
           items:
-            - name: ロールの割り当てを追加または削除する
+            - name: ロールを割り当てる
               href: role-assignments-portal.md
             - name: サブスクリプション管理者
               href: role-assignments-portal-subscription-admin.md
@@ -78,6 +78,8 @@
         - name: ARM テンプレート
           displayName: Resource Manager
           href: role-assignments-template.md
+    - name: ロールの割り当てを削除する
+      href: role-assignments-remove.md
     - name: 拒否割り当てを一覧表示する
       items:
         - name: 概要
