--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -14,7 +14,21 @@
 - name: サンプル
   items:
     - name: Azure PowerShell
-      href: powershell-samples.md
+      items:
+        - name: サンプルのスクリプト
+          href: powershell-samples.md
+        - name: VPN ゲートウェイの作成
+          href: scripts/vpn-gateway-sample-create-vpn-gateway-powershell.md
+        - name: VPN ゲートウェイ + P2S RADIUS
+          href: scripts/vpn-gateway-sample-point-to-site-radius-authentication-powershell.md
+        - name: VPN ゲートウェイ + P2S 証明書認証
+          href: scripts/vpn-gateway-sample-point-to-site-certificate-authentication-powershell.md
+        - name: VPN ゲートウェイ + サイト間
+          href: scripts/vpn-gateway-sample-site-to-site-powershell.md
+        - name: VNet 間
+          href: scripts/vpn-gateway-sample-vnet-vnet-powershell.md
+        - name: VPN デバイス テンプレートのダウンロード
+          href: scripts/vpn-gateway-sample-site-to-site-download-devicescript-powershell.md
 - name: 概念
   items:
     - name: リモート作業
@@ -101,8 +115,6 @@
           href: ../expressroute/expressroute-howto-coexist-resource-manager.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
         - name: プライベート ピアリングを介した VPN
           href: site-to-site-vpn-private-peering.md
-    - name: Azure と AWS のサイト間接続
-      href: create-vpn-azure-aws-managed-solutions.md
     - name: VNet 対 VNet 接続
       items:
         - name: VNet 間の接続の構成
