--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -59,7 +59,7 @@
   items:
     - name: 開発
       items:
-        - name: Java Spring アプリをデプロイ用に準備する
+        - name: アプリをデプロイ用に準備する
           href: spring-cloud-tutorial-prepare-app-deployment.md
         - name: 構成サーバーを設定する
           href: spring-cloud-tutorial-config-server.md
